--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Gur Raunaq Singh</title>
+	<title>Anmol deep Singh</title>
 	<meta name="description" content="My home on the Internet">  
 	<meta name="author" content="Gur Raunaq Singh">
 
@@ -60,11 +60,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Raunaq</h1>
+	   			<h1>I'm Anmol</h1>
 
 	   			<p class="intro-position">
-	   				<span>Software Developer</span>
-	   				<span>Amateur Data Scientist</span> 
+	   		<!--		<span>Software Developer</span> -->
+	   				<span>Java & Android Developer</span> 
                     <span>Seasoned Hacker</span> 
 	   			</p>
 
