--- a/twitter.html
+++ b/twitter.html
@@ -4,15 +4,15 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=#"https://twitter.com/raunaqness/">
+        <meta http-equiv="refresh" content="0; url=#"https://twitter.com/Ssnghanmoldeepk/">
         <script type="text/javascript">
-            window.location.href = "https://twitter.com/raunaqness/"
+            window.location.href = "https://twitter.com/Ssnghanmoldeepk/"
         </script>
         <title>Gur Raunaq Singh</title>
     </head>
     <body>
         If you are not redirected automatically, follow this <a 
-href='https://twitter.com/raunaqness/'>Link</a>
+href='https://twitter.com/Ssnghanmoldeepk/'>Link</a>
     </body>
 
 <!-- Mirrored from raunaqness.xyz/twitter by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Apr 2019 19:54:48 GMT -->
